...
  @override
  Widget build(BuildContext context) {
    final petViewModel = Provider.of<PetViewModel>(context, listen: false);
    final ownerViewModel = Provider.of<OwnerViewModel>(context, listen: false);

    return AlertDialog(
      title: Text('Agregar nueva mascota', style: TextStyle(color: Colors.white)),
      backgroundColor: Color(0xFF202020),
      content: SingleChildScrollView(
        child: FormBuilder(
          key: _formKey,
          child: Column(
            mainAxisSize: MainAxisSize.min,
...
            ],
          ),
        ),
      ),
      actions: [
        TextButton(
          child: Text('Cancelar', style: TextStyle(color: Colors.white)),
          onPressed: () => Navigator.of(context).pop(),
        ),
        TextButton(
          child: Text('Guardar', style: TextStyle(color: Color(0xFF00FFF5))),
          onPressed: () {
            if (_formKey.currentState!.saveAndValidate()) {
...
